--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Online Shoes Marketing</title>
+  <title>M F Team online shops</title>
   <link rel="stylesheet" href="Online Shoes Marketing.css">
   <link rel="stylesheet" href="responsive-index.css">
 </head>
@@ -15,7 +15,7 @@
     <div class="home">
       <div class="title">
         <div class="title-text">
-          <h1>nline Shoes Marketing</h1>
+          <h1>nline M F Team  shops</h1>
         </div>
         <div class="title-sbox">
           <button>Explore Products</button>
