--- a/shop.html
+++ b/shop.html
@@ -128,6 +128,12 @@
   color: #e60000;
   font-size: 20px;
 }
+
+.id {
+  font-weight: bold;
+  color: #e60000;
+  font-size: 20px;
+}
 .modal-product-img {
   width: 100%;
   max-height: 300px;
@@ -226,6 +232,81 @@
   from { transform: scale(0.7); opacity: 0; }
   to { transform: scale(1); opacity: 1; }
 }
+/* Savatcha ikonkasi */
+.cart-icon {
+  position: relative;
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+  padding: 10px;
+}
+
+.cart-icon:hover {
+  background-color: #f5f5f5;
+}
+
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+}
+
+/* Savatcha dropdown */
+.cart-dropdown {
+  display: none;
+  position: absolute;
+  right: 30; /* O'ng tomonda joylashishi */
+  top: 100%; /* Ikonka ostida chiqishi */
+  width: 300px;
+  background: white;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  padding: 15px;
+  z-index: 1000;
+  transform: translateX(10); /* O'ng tomonga surish uchun */
+}
+
+/* Agar o'ng tomonga surish kerak bo'lsa */
+.cart-dropdown.show {
+  display: block;
+  transform: translateX(0);
+}
+/* Savatchadagi mahsulotlar */
+.cart-item {
+  display: flex;
+  gap: 10px;
+  padding: 8px 0;
+  border-bottom: 1px solid #eee;
+  align-items: center;
+}
+
+.cart-item img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+.cart-total {
+  font-weight: bold;
+  margin: 10px 0;
+  text-align: right;
+}
+
+.checkout-btn {
+  width: 100%;
+  padding: 10px;
+  background: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-top: 10px;
+}
 
   </style>
 </head>
@@ -266,7 +347,11 @@
           <!-- Search results will be displayed here -->
         </div>
       </div>
-  
+<!-- Oldingi murakkab versiya o'rniga -->
+<a href="cart.html" class="cart-icon">
+  🛒 <span class="cart-count">0</span>
+</a>
+
       <!-- our-products -->
       <div class="our-products">
         <div class="p-1" id="products">
@@ -286,13 +371,12 @@
           
           See Detail
         </button>
+        
+
         </div>
         <div class="p-2" id="products">
           <div class="p-2-image" id="products-images">
             <img src="2.2.jpg" alt="">
-          </div>
-          <div class="p-2-desc" id="products-desc">
-            <h3>Lorem ipsum dolor sitr adipisicing elit. Adipisci, reprehenderit.</h3>
           </div>
           <button class="see-detail-btn"
           data-image="2.2.jpg"
@@ -300,9 +384,10 @@
           data-description="Dvoyka erkaklar uchun yozgi sportivka 2 ip polyester HB mato"
           data-price="500.000"
           data-sizes="L,XL,XXL"
-          data-discount="265.000">
+          data-discount="265.000"
+          data-id="12345">
           See Detail
-        </button>
+      </button>
         </div>
         <div class="p-3" id="products">
           <div class="p-3-image" id="products-images">
@@ -314,7 +399,10 @@
           <button class="see-detail-btn"
           data-image="7777.jpg"
           data-title="DVOYKA"
-          data-description="Bu zamonaviy oq sport poyabzal juda qulay va bardoshlidir. 2025 yilgi yangi model.">
+          data-description="Bu zamonaviy oq sport poyabzal juda qulay va bardoshlidir. 2025 yilgi yangi model."
+          data-price="500.000"
+          data-discount="111.000"
+          data-sizes="22,23,24,25">
           See Detail
         </button>
         </div>
@@ -326,7 +414,7 @@
             <h3>Lorem ipsum dolor sit consectetur adipisicing elit. Adipisci, reprehenderit.</h3>
           </div>
           <button class="see-detail-btn"
-          data-image="7.jpg"
+          data-image="15.jpg"
           data-title="Oq sport poyabzal"
           data-description="Bu zamonaviy oq sport poyabzal juda qulay va bardoshlidir. 2025 yilgi yangi model.">
           See Detail
