--- a/shop.html
+++ b/shop.html
@@ -330,7 +330,7 @@
           <div class="toggle-line"></div>
         </div>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="desktop.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="contact.html">Contact Us</a></li>
